# tozo

./: README.md
.github/workflows/: ci.yml
backend/: .gitignore  pyproject.toml
backend/src/backend/: development.env  run.py  testing.env
backend/src/tozo.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/tests/blueprints/: test_control.py
frontend/: package-lock.json  package.json
infrastructure/: ansible.cfg  main.tf  secrets.auto.tfvars.vault  terraform.tfstate.vault
