[tool.pdm]

[tool.pdm.dev-dependencies]
dev = [
    "black>=23.3.0",
    "isort>=5.12.0",
    "djhtml>=3.0.6",
    "mypy>=1.2.0",
    "flake8>=6.0.0",
    "bandit>=1.7.5",
    "vulture>=2.7",
    "pytest>=7.3.1",
    "pytest-asyncio>=0.21.0",
    "freezegun>=1.2.2",
]
[project]
name = "tozo"
version = "0.0.1"
description = "app for learn python & typescript"
authors = [
    {name = "Antonio Pardo", email = "apardo@spluca.org"},
]
dependencies = [
    "quart>=0.18.4",
    "quart-auth>=0.8.0",
    "bcrypt>=4.0.1",
    "zxcvbn>=4.4.28",
    "itsdangerous>=2.1.2",
    "quart-rate-limiter>=0.8.0",
]
requires-python = ">=3.11"
license = {text = "MIT"}

[tool.black]
target-version = ["py311"]

[tool.isort]
profile = "black"

[tool.vulture]
min_confidence = 100

[tool.pytest.ini_options]
addopts = "--showlocals"
asyncio_mode = "auto"
pythonpath = ["src"]

[tool.pdm.scripts]
format-black = "black src/ tests/"
format-djhtml = "djhtml src/backend/templates -t 2 --in-place"
format-isort = "isort src tests"
format = {composite = ["format-black", "format-djhtml", "format-isort"]}
lint-bandit = "bandit -r src/"
lint-black = "black --check --diff src/ tests/"
lint-djhtml = "djhtml src/backend/templates -t 2 --check"
lint-flake8 = "flake8 src/ tests/"
lint-isort = "isort --check --diff src tests"
lint-mypy = "mypy src/backend tests"
lint-vulture = "vulture src"
lint = {composite = ["lint-bandit", "lint-black", "lint-djhtml", "lint-flake8", "lint-isort", "lint-mypy", "lint-vulture"]}
start = {cmd = "quart --app src/backend/run.py run --port 5050", env_file = "development.env"}
test = {cmd = "pytest tests/", env_file = "testing.env"}
